
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_ficha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_collapseMode="pin"
            app:title="@string/datasheet"
            app:titleTextAppearance="@style/title_bar" />
    </android.support.design.widget.AppBarLayout>

    <TextView
        style="@style/text_datasheet_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="@string/iux" />

    <TextView
        style="@style/text_datasheet_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="8dp"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/ux_name" />

    <TextView
        style="@style/text_datasheet_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="@string/developer" />

    <TextView
        style="@style/text_datasheet_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="8dp"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/developer_name" />

    <TextView
        style="@style/text_datasheet_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="@string/qa" />

    <TextView
        style="@style/text_datasheet_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="8dp"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/qa_name" />


</LinearLayout>
</layout>