<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable name="viewModel" type="br.com.appdog.viewmodel.MainViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:text="List Dog"
                app:titleTextColor="@color/colorWhite"
                android:contentInsetLeft="0dp"
                android:contentInsetStart="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                android:contentInsetRight="0dp"
                android:contentInsetEnd="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetEnd="0dp" >
            </android.support.v7.widget.Toolbar>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <android.support.design.widget.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabSelectedTextColor="@color/colorPrimary">

                    <android.support.design.widget.TabItem
                        android:id="@+id/tabItem1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_marginRight="100dp"
                        android:text="@string/husky" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/tabItem2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_marginRight="100dp"
                        android:text="@string/hound" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/tabItem3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_marginRight="100dp"
                        android:text="@string/pug" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/tabItem4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_marginRight="100dp"
                        android:text="@string/labrador" />

                </android.support.design.widget.TabLayout>
                <View style="@style/horizontal_divider"/>
                <LinearLayout
                    android:id="@+id/lnl_menu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:divider="@color/colorGray"
                    >
                    <android.support.v4.view.ViewPager
                        android:id="@+id/container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior">

                        <FrameLayout
                            android:id="@+id/conteiner_fragment"
                            android:layout_gravity="top"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            />

                    </android.support.v4.view.ViewPager>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
<!--        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}"/>-->

<!--        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/empty_state"
            android:visibility="visible"/>-->
    </RelativeLayout>




</layout>


